--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-
 dist
+worker
 .solid
-.output
 .vercel
+.output
 .netlify
+.vinxi
 netlify
-
-# Environment
-.env
-.env*.local
 
 # dependencies
 /node_modules
