--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.10.1",
-    "@solidjs/start": "^0.4.0-alpha.4",
+    "@solidjs/start": "0.4.0-alpha.5",
     "solid-js": "^1.8.7",
-    "vinxi": "0.0.48",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vinxi": "0.0.48"
   },
   "engines": {
     "node": ">=18"
